chore()fixing order on mobile

--- a/app/src/app/shared/modules/blocks/image-l-block/image-l-block.component.scss
+++ b/app/src/app/shared/modules/blocks/image-l-block/image-l-block.component.scss
@@ -1,12 +1,8 @@
-
-
-
 @media (max-width: 600px) {
 
   section, .grid {
     padding: 0;
   }
-
 
   .title {
     margin: 10px 0;
@@ -23,6 +19,32 @@
 
   img {
     width: 100%;
+  }
+
+  .content-wrapper {
+    order: 2;
+  }
+
+  .image-container {
+    order:3;
+  }
+
+  .mobile-wrapper {
+    order: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    &-content {
+      order:3;
+    }
+    &-title {
+      order: 2;
+    }
+    &-image {
+      order: 1;
+    }
   }
 
 }
